fix All cards spacing and heading

--- a/app/assets/stylesheets/components/_index_explore.scss
+++ b/app/assets/stylesheets/components/_index_explore.scss
@@ -21,6 +21,13 @@
   }
 }
 
+.allcard-heading h1 {
+  color: $primary;
+  font-size: 25px;
+  font-weight: 700;
+  margin-bottom: 15px;
+  padding-left: 15px;
+}
 
 .wish-button-container {
   display: flex;
